# substack

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  ruff.toml
src/substack/property_based_testing/: change_of_state.py  fns.py
src/substack/stateful_things/pt_1/: adapters.py  simple_usecase.py
src/substack/stateful_things/pt_1/src_code/: more_complicated_usecase.py  simple_usecase.py
src/substack/stateful_things/pt_1/tests/: test_adapters.py  test_simple_usecase.py
src/substack/stateful_things/pt_2/: adapters.py
src/substack/stateful_things/pt_2/tests/: test_adapter_apis.py
src/substack/stateful_things/pt_3/: abc_adapters.py  io_funcs.py
src/substack/stateful_things/pt_4/: adapters.py  io_funcs.py  registries.py
tests/property_based_testing/: test_change_of_state.py  test_fns.py  test_invariants.py  test_inversion_property.py
tests/stateful_things/pt_1/: test_adapters.py  test_simple_usecase.py
tests/stateful_things/pt_2/: test_adapter_apis.py
tests/stateful_things/pt_3/: test_adapter_apis.py
